# interop

./: .flake8  .gitignore  AUTHORS  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
examples/: app.py  fastapi.py  simple.py
interop/: __init__.py  publisher.py  signals.py  subscriber.py  utils.py
interop/cli/: __init__.py  init.py  publisher.py  subscriber.py  utils.py
interop/cli/templates/: .gitignore.jinja2  .sample.env.local.jinja2  Makefile.jinja2  README.md.jinja2  __init__.py.jinja2  __main__.py.jinja2  publisher.py.jinja2  pyproject.toml.jinja2  setup.cfg.jinja2  subscriber.py.jinja2
scripts/: pydecache.py  pyformat.sh
tests/: test_run.py
