[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
^/(
    | \.git
    | \.venv
    | build
    | dist
)/
'''
experimental-string-processing = true
include = '\.pyi?$'
include-trailing-comma = false
line-length = 79
target-version = ['py310']

[tool.isort]
force_single_line = "true"
profile = "black"
src_paths = ["interop"]

[tool.poetry]
authors = [
    "A. J. Wray <ajw@ajw.sl>",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10.1",
    "Programming Language :: Python :: 3 :: Only",
]
description = "Asynchronous publish/subscribe client for RabbitMQ,"
homepage = "https://github.com/timzaz/interop"
keywords = [
    "publisher",
    "rabbitmq",
    "subscriber"
]
license = "private"
name = "interop"
readme = "README.md"
repository = "https://github.com/timzaz/interop.git"
version = "0.3.4"

[tool.poetry.dependencies]
python = ">=3.10.1,<4.0"
pika = "^1.2.0"
python-dotenv = "^0.19.1"
blinker-async = "^0.0.3"
typer = "^0.4.0"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = {version = "^21.12b0", allow-prereleases = true}
flake8 = "^3.8.4"
ipython = "^7.19.0"
isort = "5.8.0"
pytest = "^6.2.2"

[tool.poetry.scripts]
interop = "interop.cli:main"
