[project]
authors = [
    {name = "A. J. Wray", email = "ajw@ajw.sl"}
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "asyncblink==0.5.0",
    "jinja2==3.1.4",
    "pika==1.3.2",
    "python-dotenv==1.0.1",
    "typer==0.15.1",
]
description = "Asynchronous publish/subscribe client for RabbitMQ"
keywords = [
    "publisher",
    "rabbitmq",
    "subscriber"
]
license = {file = "LICENSE"}
name = "interop"
readme = "README.md"
requires-python = ">=3.11,<4.0"
version = "0.4.2"

[dependency-groups]
dev = [
    "asgiref>=3.8.1",
    "fastapi>=0.115.6",
    "interop",
    "ipython>=8.30.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "uvicorn>=0.33.0",
]

[project.scripts]
interop = "interop.cli:main"

[project.urls]
repository = "https://github.com/timzaz/interop.git"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.format]
docstring-code-format = true

[tool.uv.sources]
interop = { workspace = true }

[[tool.uv.index]]
url = "https://pypi.poraodojuca.dev/"
